--- a/.github/workflows/test-and-publish-nightly.yml
+++ b/.github/workflows/test-and-publish-nightly.yml
@@ -1,9 +1,9 @@
-name: Test and Publish 📦 Nightly to TestPyPI
+name: build
 on: [push]
 
 jobs:
   test:
-    name: Run Tests
+    name: Run Tests and Code Coverage 📝
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -11,16 +11,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.python-version }} 🐍
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install dependencies ⚙️
       run: |
         python -m pip install --upgrade pip
         pip install .
         pip install pytest
-    - name: Test with pytest
+    - name: Test with pytest ✅
       run: |
         pytest
 
@@ -39,6 +39,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+    - name: Set alpha version
+      run: sed -i "/^version = /s/$/a$(git rev-parse --short HEAD)/" setup.cfg
     - name: Build a binary wheel and a source tarball 🚧
       run: |
         python -m build --sdist --wheel --outdir dist/ .
