reworking github action to only publish on version changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = distancerasters
-version = 0.2.2
+version = 0.2.2a4
 description = Generate distance raster using arbitrary sets of spatial features
 long_description = file:README.md
 long_description_content_type = text/markdown
