--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -25,12 +25,17 @@ jobs:
         pytest
 
   publish:
-    name: Publish Nightly 🚀
+    name: Publish 🚀
     needs: test
     runs-on: ubuntu-latest
+    env:
+      VERSION: null
+      VERSION_BUMPED: false
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 2
     - name: Set up Python 🐍
       uses: actions/setup-python@v2
       with:
@@ -39,14 +44,23 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
-    - name: Set alpha version
-      run: sed -i "/^version = /s/$/a$(git rev-parse --short HEAD)/" setup.cfg
+    - name: Check if version bumped
+      run: |
+        cat setup.cfg | grep "version = " | awk '{print "VERSION="$(NF)}' >> $GITHUB_ENV
+        if ! git diff --quiet -G "version = " HEAD^ HEAD setup.cfg; then echo "VERSION_BUMPED=true" >> $GITHUB_ENV; fi
     - name: Build a binary wheel and a source tarball 🚧
       run: |
         python -m build --sdist --wheel --outdir dist/ .
     - name: Publish to Test PyPI 📦
+      if: (env.VERSION_BUMPED && contains(env.VERSION, 'a'))
       uses: pypa/gh-action-pypi-publish@v1.4.2
       with:
         user: __token__
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
+    - name: Publish to PyPI 📦
+      if: (env.VERSION_BUMPED && !contains(env.VERSION, 'a'))
+      uses: pypa/gh-action-pypi-publish@v1.4.2
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
