--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -19,10 +19,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install pytest
+        pip install pytest pytest-cov
     - name: Test with pytest ✅
       run: |
-        pytest
+        pytest --cov=distancerasters
+    - name: Coveralls 👖
+      if: matrix.python-version == 3.9
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        GITHUB_TOKEN: $COVERALLS_REPO_TOKEN
+      run: |
+        pip install coveralls
+        coveralls
 
   publish:
     name: Publish 🚀
