--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install pytest pytest-cov
+        pip install pytest pytest-cov shapely
     - name: Test with pytest ✅
       run: |
         pytest --cov=distancerasters
