--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,40 +1,11 @@
-name: build
-on: [push]
+name: publish
+on:
+  release:
+    types: [published]
 
 jobs:
-  test:
-    name: Run Tests and Code Coverage 📝
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }} 🐍
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies ⚙️
-      run: |
-        python -m pip install --upgrade pip
-        pip install .
-        pip install pytest pytest-cov shapely
-    - name: Test with pytest ✅
-      run: |
-        pytest --cov=distancerasters
-    - name: Coveralls 👖
-      if: matrix.python-version == 3.9
-      env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        GITHUB_TOKEN: $COVERALLS_REPO_TOKEN
-      run: |
-        pip install coveralls
-        coveralls
-
   publish:
     name: Publish 🚀
-    needs: test
     runs-on: ubuntu-latest
     env:
       VERSION: null
@@ -52,13 +23,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
-    - name: Check if version bumped
+    - name: Get version #️⃣
       run: |
         cat setup.cfg | grep "version = " | awk '{print "VERSION="$(NF)}' >> $GITHUB_ENV
-        if ! git diff --quiet -G "version = " HEAD^ HEAD setup.cfg; then echo "VERSION_BUMPED=true" >> $GITHUB_ENV; fi
     - name: Build a binary wheel and a source tarball 🚧
       run: |
         python -m build --sdist --wheel --outdir dist/ .
+    - name: Validate release tag
+      if: github.ref != env.VERSION
+      run: exit 1
     - name: Publish to Test PyPI 📦
       if: |
         env.VERSION_BUMPED == true &&
