--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -30,8 +30,8 @@ jobs:
       run: |
         python -m build --sdist --wheel --outdir dist/ .
     - name: Validate release tag
-      if: github.ref != env.VERSION
-      run: exit 1
+      run: |
+        if [ "${GITHUB_REF#refs/*/}" != "$VERSION" ]; then exit 1; fi
     - name: Publish to Test PyPI 📦
       if: |
         env.VERSION_BUMPED == true &&
