--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = distancerasters
-version = 0.3.0a1
+version = 0.3.0b1
 description = Generate distance raster using arbitrary sets of spatial features
 long_description = file:README.md
 long_description_content_type = text/markdown
