--- a/.github/workflows/test-with-coverage.yml
+++ b/.github/workflows/test-with-coverage.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install pytest pytest-cov shapely build
+        pip install pytest pytest-cov shapely build geopandas
     - name: Test with pytest ✅
       run: |
         pytest --cov=distancerasters
