--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install pytest pytest-cov shapely
+        pip install pytest pytest-cov shapely geopandas
     - name: Test with pytest ✅
       run: |
         pytest --cov=distancerasters
