--- a/.github/workflows/test-with-coverage.yml
+++ b/.github/workflows/test-with-coverage.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9, '3.10']
 
     steps:
     - uses: actions/checkout@v2
@@ -19,6 +19,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies ⚙️
       run: |
+        sudo apt-get update
+        sudo apt-get install libgdal-dev
         python -m pip install --upgrade pip
         pip install .
         pip install pytest pytest-cov shapely build geopandas
@@ -26,7 +28,7 @@ jobs:
       run: |
         pytest --cov=distancerasters
     - name: Coveralls 👖
-      if: matrix.python-version == 3.9
+      if: matrix.python-version == '3.10'
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         GITHUB_TOKEN: $COVERALLS_REPO_TOKEN
